--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="info-section">
                     <div class="info-box">
                         <h3></h3>
-                        <p></p>
+                        <p>%20 İndirim</p>
                     </div>
                     <div class="location-discount">
                         <span class="location">
@@ -29,7 +29,7 @@
                                 Liberica Location 📍
                             </a>
                         </span>
-                        <span class="discount">%20</span>
+                        <span class="discount"></span>
                     </div>
                 </div>
             </div>
@@ -42,7 +42,7 @@
                 <div class="info-section">
                     <div class="info-box">
                         <h3></h3>
-                        <p></p>
+                        <p>%20 İndirim</p>
                     </div>
                     <div class="location-discount">
                         <span class="location">
@@ -50,7 +50,7 @@
                                 St. Morris Coffee & Kitchen Location 📍
                             </a>
                         </span>
-                        <span class="discount">%20</span>
+                        <span class="discount"></span>
                     </div>
                 </div>
             </div>
@@ -63,7 +63,7 @@
                 <div class="info-section">
                     <div class="info-box">
                         <h3></h3>
-                        <p></p>
+                        <p>%10 İndirim</p>
                     </div>
                     <div class="location-discount">
                         <span class="location">
@@ -71,7 +71,7 @@
                                 Künefeci Salih Usta 📍
                             </a>
                         </span>
-                        <span class="discount">%10</span>
+                        <span class="discount"></span>
                     </div>
                 </div>
             </div>
@@ -84,7 +84,7 @@
                 <div class="info-section">
                     <div class="info-box">
                         <h3></h3>
-                        <p></p>
+                        <p>%15 İndirim</p>
                     </div>
                     <div class="location-discount">
                         <span class="location">
@@ -92,7 +92,7 @@
                                 Mojo Burger 📍
                             </a>
                         </span>
-                        <span class="discount">%15</span>
+                        <span class="discount"></span>
                     </div>
                 </div>
             </div>
@@ -105,7 +105,7 @@
                 <div class="info-section">
                     <div class="info-box">
                         <h3></h3>
-                        <p></p>
+                        <p>%10 İndirim</p>
                     </div>
                     <div class="location-discount">
                         <span class="location">
@@ -113,7 +113,7 @@
                                 Hewş Kültür Sanat 📍
                             </a>
                         </span>
-                        <span class="discount">%10</span>
+                        <span class="discount"></span>
                     </div>
                 </div>
             </div>
@@ -126,7 +126,7 @@
                 <div class="info-section">
                     <div class="info-box">
                         <h3></h3>
-                        <p></p>
+                        <p>%5-25 İndirim</p>
                     </div>
                     <div class="location-discount">
                         <span class="location">
@@ -134,7 +134,7 @@
                                 Silva Ozalit 📍
                             </a>
                         </span>
-                        <span class="discount">%5-25</span>
+                        <span class="discount"></span>
                     </div>
                 </div>
             </div>
@@ -147,7 +147,7 @@
                 <div class="info-section">
                     <div class="info-box">
                         <h3></h3>
-                        <p></p>
+                        <p>%25 İndirim</p>
                     </div>
                     <div class="location-discount">
                         <span class="location">
@@ -160,7 +160,7 @@
                                 Diclekent 📍
                             </a>
                         </span>
-                        <span class="discount">%25</span>
+                        <span class="discount"></span>
                     </div>
                 </div>
             </div>
@@ -173,6 +173,7 @@
                 <div class="info-section">
                     <div class="info-box">
                         <h3></h3>
+                        <p>%10 İndirim</p>
                         <p>Paket servislerde geçerli değildir</p>
                     </div>
                     <div class="location-discount">
@@ -181,7 +182,7 @@
                                 Sur İçi 📍
                             </a>
                         </span>
-                        <span class="discount">%10</span>
+                        <span class="discount"></span>
                     </div>
                 </div>
             </div>
@@ -194,6 +195,7 @@
                 <div class="info-section">
                     <div class="info-box">
                         <h3></h3>
+                        <p>%10 İndirim</p>
                         <p>Nakit ödemelerde geçerlidir.</p>
                     </div>
                     <div class="location-discount">
@@ -202,7 +204,7 @@
                                 Şimel Yemek Evi 📍
                             </a>
                         </span>
-                        <span class="discount">%10</span>
+                        <span class="discount"></span>
                     </div>
                 </div>
             </div>
@@ -215,6 +217,7 @@
                 <div class="info-section">
                     <div class="info-box">
                         <h3></h3>
+                        <p>%10 İndirim</p>
                         <p>Nakit ödemelerde geçerlidir.</p>
                     </div>
                     <div class="location-discount">
@@ -236,7 +239,7 @@
                 <div class="info-section">
                     <div class="info-box">
                         <h3></h3>
-                        <p></p>
+                        <p>%10-20 İndirim</p>
                     </div>
                     <div class="location-discount">
                         <span class="location">
@@ -244,7 +247,7 @@
                                 Four's Plaza 📍
                             </a>
                         </span>
-                        <span class="discount">%10-20</span>
+                        <span class="discount"></span>
                     </div>
                 </div>
             </div>
@@ -257,7 +260,7 @@
                 <div class="info-section">
                     <div class="info-box">
                         <h3></h3>
-                        <p></p>
+                        <p>%10 İndirim</p>
                     </div>
                     <div class="location-discount">
                         <span class="location">
@@ -265,7 +268,7 @@
                                 Hybrid Gym 📍
                             </a>
                         </span>
-                        <span class="discount">%10</span>
+                        <span class="discount"></span>
                     </div>
                 </div>
             </div>
@@ -278,7 +281,7 @@
                 <div class="info-section">
                     <div class="info-box">
                         <h3></h3>
-                        <p></p>
+                        <p>%5-15 İndirim</p>
                     </div>
                     <div class="location-discount">
                         <span class="location">
@@ -286,7 +289,7 @@
                                 Berko Medikal 📍
                             </a>
                         </span>
-                        <span class="discount">%5-15</span>
+                        <span class="discount"></span>
                     </div>
                 </div>
             </div>
@@ -299,7 +302,7 @@
                 <div class="info-section">
                     <div class="info-box">
                         <h3></h3>
-                        <p></p>
+                        <p>%10 İndirim</p>
                     </div>
                     <div class="location-discount">
                         <span class="location">
@@ -320,8 +323,8 @@
                 <div class="info-section">
                     <div class="info-box">
                         <h3></h3>
-                        <p>İçeceklerde %10</p>
-                        <p>Yemeklerde %5</p>
+                        <p>İçeceklerde %10 İndirim</p>
+                        <p>Yemeklerde %5 İndirim</p>
                     </div>
                     <div class="location-discount">
                         <span class="location">
@@ -329,7 +332,7 @@
                                Firuze 📍
                             </a>
                         </span>
-                        <span class="discount">%5-10</span>
+                        <span class="discount"></span>
                     </div>
                 </div>
             </div>
@@ -342,8 +345,8 @@
                 <div class="info-section">
                     <div class="info-box">
                         <h3></h3>
-                        <p>İçeceklerde %10</p>
-                        <p>Yemeklerde %5</p>
+                        <p>İçeceklerde %10 İndirim</p>
+                        <p>Yemeklerde %5 İndirim</p>
                     </div>
                     <div class="location-discount">
                         <span class="location">
@@ -351,7 +354,7 @@
                                 Location 1 📍
                             </a>
                         </span>
-                        <span class="discount">%5-10</span>
+                        <span class="discount"></span>
                     </div>
                 </div>
             </div>
@@ -364,7 +367,7 @@
                 <div class="info-section">
                     <div class="info-box">
                         <h3></h3>
-                        <p></p>
+                        <p>%10 İndirim</p>
                     </div>
                     <div class="location-discount">
                         <span class="location">
@@ -372,7 +375,7 @@
                                Rüya Kahvesi 📍
                             </a>
                         </span>
-                        <span class="discount">%10</span>
+                        <span class="discount"></span>
                     </div>
                 </div>
             </div>
@@ -385,7 +388,7 @@
                 <div class="info-section">
                     <div class="info-box">
                         <h3></h3>
-                        <p></p>
+                        <p>%10 İndirim</p>
                     </div>
                     <div class="location-discount">
                         <span class="location">
@@ -393,7 +396,7 @@
                                Diclekent 📍
                             </a>
                         </span>
-                        <span class="discount">%10</span>
+                        <span class="discount"></span>
                     </div>
                 </div>
             </div>
@@ -406,7 +409,7 @@
                 <div class="info-section">
                     <div class="info-box">
                         <h3></h3>
-                        <p></p>
+                        <p>%10 İndirim</p>
                     </div>
                     <div class="location-discount">
                         <span class="location">
@@ -419,7 +422,7 @@
                                 75 📍
                             </a>
                         </span>
-                        <span class="discount">%10</span>
+                        <span class="discount"></span>
                     </div>
                 </div>
             </div>
@@ -432,7 +435,7 @@
                 <div class="info-section">
                     <div class="info-box">
                         <h3></h3>
-                        <p></p>
+                        <p>%10 İndirim</p>
                     </div>
                     <div class="location-discount">
                         <span class="location">
@@ -440,7 +443,7 @@
                                 Nevada Coffee 📍
                             </a>
                         </span>
-                        <span class="discount">%10</span>
+                        <span class="discount"></span>
                     </div>
                 </div>
             </div>
@@ -453,6 +456,7 @@
                 <div class="info-section">
                     <div class="info-box">
                         <h3></h3>
+                        <p>%10 İndirim</p>
                         <p>Cumartesi günü olan etkinlikler hariçtir.</p>
                     </div>
                     <div class="location-discount">
@@ -461,7 +465,7 @@
                                 Maria'nın Yeri📍
                             </a>
                         </span>
-                        <span class="discount">%10</span>
+                        <span class="discount"></span>
                     </div>
                 </div>
             </div>
@@ -474,7 +478,7 @@
                 <div class="info-section">
                     <div class="info-box">
                         <h3></h3>
-                        <p></p>
+                        <p>%10 İndirim</p>
                     </div>
                     <div class="location-discount">
                         <span class="location">
@@ -482,7 +486,7 @@
                                 Ekleristan 📍
                             </a>
                         </span>
-                        <span class="discount">%10</span>
+                        <span class="discount"></span>
                     </div>
                 </div>
             </div>
@@ -495,6 +499,7 @@
                 <div class="info-section">
                     <div class="info-box">
                         <h3></h3>
+                        <p>%10 İndirim</p>
                         <p>Paket servislerde geçerli değildir.</p>
                     </div>
                     <div class="location-discount">
@@ -516,6 +521,7 @@
                 <div class="info-section">
                     <div class="info-box">
                         <h3></h3>
+                        <p>%20 İndirim</p>
                         <p>Paket servislerde geçerli değildir.</p>
                     </div>
                     <div class="location-discount">
@@ -537,7 +543,7 @@
                 <div class="info-section">
                     <div class="info-box">
                         <h3></h3>
-                        <p> </p>
+                        <p>%10 İndirim</p>
                     </div>
                     <div class="location-discount">
                         <span class="location">
@@ -545,7 +551,7 @@
                                 Winstown AVM 📍
                             </a>
                         </span>
-                        <span class="discount">%10</span>
+                        <span class="discount"></span>
                     </div>
                 </div>
             </div>
@@ -570,7 +576,7 @@
                                 Yayın Ağacı 📍
                             </a>
                         </span>
-                        <span class="discount">%30-40</span>
+                        <span class="discount"></span>
                     </div>
                 </div>
             </div>
