--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                     <div class="info-box">
                         <h3></h3>
                         <p>%10 İndirim</p>
-                        <p>Paket servislerde geçerli değildir</p>
+                        <p>Paket servislerde geçerli değildir.</p>
                     </div>
                     <div class="location-discount">
                         <span class="location">
