--- a/index.html
+++ b/index.html
@@ -165,11 +165,11 @@
                 </div>
             </div>
         </div>
-        <!-- Maydanoz Döner -->
+        <!-- Maydonoz Döner -->
         <div class="company-box">
             <img src="logos/maydanoz.jpg" alt="Company 8" class="company-image">
             <div class="company-info">
-                <h2>Maydanoz Döner</h2>
+                <h2>Maydonoz Döner</h2>
                 <div class="info-section">
                     <div class="info-box">
                         <h3></h3>
@@ -470,20 +470,20 @@
                 </div>
             </div>
         </div>
-        <!-- Ekleristan -->
+        <!-- Mona Rosa -->
         <div class="company-box">
-            <img src="logos/ekleristan.jpg" alt="Company 1" class="company-image">
+            <img src="logos/mona_rosa.jpg" alt="Company 1" class="company-image">
             <div class="company-info">
-                <h2>Ekleristan</h2>
+                <h2>Mona Rosa Coffee</h2>
                 <div class="info-section">
                     <div class="info-box">
                         <h3></h3>
-                        <p>%10 İndirim</p>
+                        <p>%20 İndirim</p>
                     </div>
                     <div class="location-discount">
                         <span class="location">
-                            <a href="https://www.google.com/maps/place/Fırat,+Ekleristan+Diyarbakır,+Mezopotamya+Blv+MER+Sitesi+No:26+BB+A2+Blok,+21070+Kayapınar%2FDiyarbakır/data=!4m2!3m1!1s0x40751f9f819ccdcd:0xb227f82d3a9f3d9a?utm_source=mstt_1&entry=gps&coh=192189&g_ep=CAESCjExLjE0My4zMDUYACCenQoqdSw5NDIyMzI5OSw5NDIxNjQxMyw5NDIxMjQ5Niw5NDIxMjY2Niw5NDIwNzM5NCw5NDIwNzUwNiw5NDIwODUwNiw5NDIxNzUyMyw5NDIxODY1Myw5NDIyOTgzOSw0NzA4NzExOCw0NzA4NDM5Myw5NDIxMzIwMEICVFI%3D&g_st=aw" target="_blank">
-                                Ekleristan 📍
+                            <a href="https://www.google.com/maps/place/Hasırlı,+Mona+Rosa+Cafe%26Kahvaltı,+Yenikapı+Sk.+No:26,+21200+Sur%2FDiyarbakır/data=!4m2!3m1!1s0x407521b6ac43a989:0x419b1e5cc7bc0eb2?utm_source=mstt_1&entry=gps&coh=192189&g_ep=CAESCjExLjE0My4zMDUYACCenQoqdSw5NDIyMzI5OSw5NDIxNjQxMyw5NDIxMjQ5Niw5NDIxMjY2Niw5NDIwNzM5NCw5NDIwNzUwNiw5NDIwODUwNiw5NDIxNzUyMyw5NDIxODY1Myw5NDIyOTgzOSw0NzA4NzExOCw0NzA4NDM5Myw5NDIxMzIwMEICVFI%3D&g_st=aw" target="_blank">
+                                Mona Rosa 📍
                             </a>
                         </span>
                         <span class="discount"></span>
@@ -549,6 +549,27 @@
                         <span class="location">
                             <a href="https://www.google.com/maps/place/Niyokki+Diyarbakır+Winstown+AVM/@37.9676937,40.1552088,17z/data=!3m1!4b1!4m6!3m5!1s0x40751d26f0f070f9:0x224c589f05c263ff!8m2!3d37.9676937!4d40.1552088!16s%2Fg%2F11y1jfb6s6?entry=ttu&g_ep=EgoyMDI0MDkwMy4wIKXMDSoASAFQAw%3D%3D" target="_blank">
                                 Winstown AVM 📍
+                            </a>
+                        </span>
+                        <span class="discount"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Kuaför Yusuf Eymen -->
+        <div class="company-box">
+            <img src="logos/yusuf_eymen.jpg" alt="Company 1" class="company-image">
+            <div class="company-info">
+                <h2>Kuaför Yusuf Eymen</h2>
+                <div class="info-section">
+                    <div class="info-box">
+                        <h3></h3>
+                        <p>%10-20</p>
+                    </div>
+                    <div class="location-discount">
+                        <span class="location">
+                            <a href="https://www.google.com/maps/place/Kooperatifler,+Kuaför+Yunus+Eymen,+Akkoyunlu+4.+Sk.+No:24%2FB,+21100+Yenişehir%2FDiyarbakır/data=!4m2!3m1!1s0x407521c6c3eb6d65:0x2fbe76d2523511ff?utm_source=mstt_1&entry=gps&coh=192189&g_ep=CAESCjExLjE0My4zMDUYACCenQoqdSw5NDIyMzI5OSw5NDIxNjQxMyw5NDIxMjQ5Niw5NDIxMjY2Niw5NDIwNzM5NCw5NDIwNzUwNiw5NDIwODUwNiw5NDIxNzUyMyw5NDIxODY1Myw5NDIyOTgzOSw0NzA4NzExOCw0NzA4NDM5Myw5NDIxMzIwMEICVFI%3D&g_st=aw" target="_blank">
+                                Kuaför Yusuf Eymen 📍
                             </a>
                         </span>
                         <span class="discount"></span>
