--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
                 <div class="info-section">
                     <div class="info-box">
                         <h3></h3>
-                        <p>%10-20</p>
+                        <p>%10-20 İndirim</p>
                     </div>
                     <div class="location-discount">
                         <span class="location">
