--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                                 Şimel Kadın Kooperatifi 📍
                             </a>
                         </span>
-                        <span class="discount">%10</span>
+                        <span class="discount"></span>
                     </div>
                 </div>
             </div>
@@ -310,7 +310,7 @@
                                 Tostçu Dayım 📍
                             </a>
                         </span>
-                        <span class="discount">%10</span>
+                        <span class="discount"></span>
                     </div>
                 </div>
             </div>
@@ -508,7 +508,7 @@
                                 Diyar Tantuni 📍
                             </a>
                         </span>
-                        <span class="discount">%10</span>
+                        <span class="discount"></span>
                     </div>
                 </div>
             </div>
@@ -530,7 +530,7 @@
                                 Diclekent 📍
                             </a>
                         </span>
-                        <span class="discount">%20</span>
+                        <span class="discount"></span>
                     </div>
                 </div>
             </div>
@@ -556,11 +556,11 @@
                 </div>
             </div>
         </div>
-        <!-- Kuaför Yusuf Eymen -->
+        <!-- Kuaför Süleymen Tekin -->
         <div class="company-box">
             <img src="logos/yusuf_eymen.jpg" alt="Company 1" class="company-image">
             <div class="company-info">
-                <h2>Kuaför Yusuf Eymen</h2>
+                <h2>Kuaför Süleyman Tekin</h2>
                 <div class="info-section">
                     <div class="info-box">
                         <h3></h3>
@@ -569,7 +569,7 @@
                     <div class="location-discount">
                         <span class="location">
                             <a href="https://www.google.com/maps/place/Kooperatifler,+Kuaför+Yunus+Eymen,+Akkoyunlu+4.+Sk.+No:24%2FB,+21100+Yenişehir%2FDiyarbakır/data=!4m2!3m1!1s0x407521c6c3eb6d65:0x2fbe76d2523511ff?utm_source=mstt_1&entry=gps&coh=192189&g_ep=CAESCjExLjE0My4zMDUYACCenQoqdSw5NDIyMzI5OSw5NDIxNjQxMyw5NDIxMjQ5Niw5NDIxMjY2Niw5NDIwNzM5NCw5NDIwNzUwNiw5NDIwODUwNiw5NDIxNzUyMyw5NDIxODY1Myw5NDIyOTgzOSw0NzA4NzExOCw0NzA4NDM5Myw5NDIxMzIwMEICVFI%3D&g_st=aw" target="_blank">
-                                Kuaför Yusuf Eymen 📍
+                                Kuaför Süleyman Tekin📍
                             </a>
                         </span>
                         <span class="discount"></span>
