--- a/index.html
+++ b/index.html
@@ -348,14 +348,6 @@
                         <p>İçeceklerde %10 İndirim</p>
                         <p>Yemeklerde %5 İndirim</p>
                     </div>
-                    <div class="location-discount">
-                        <span class="location">
-                            <a href="https://www.google.com/maps/search/?api=1&query=Location+1" target="_blank">
-                                Location 1 📍
-                            </a>
-                        </span>
-                        <span class="discount"></span>
-                    </div>
                 </div>
             </div>
         </div>
@@ -570,6 +562,48 @@
                         <span class="location">
                             <a href="https://www.google.com/maps/place/Kooperatifler,+Kuaför+Yunus+Eymen,+Akkoyunlu+4.+Sk.+No:24%2FB,+21100+Yenişehir%2FDiyarbakır/data=!4m2!3m1!1s0x407521c6c3eb6d65:0x2fbe76d2523511ff?utm_source=mstt_1&entry=gps&coh=192189&g_ep=CAESCjExLjE0My4zMDUYACCenQoqdSw5NDIyMzI5OSw5NDIxNjQxMyw5NDIxMjQ5Niw5NDIxMjY2Niw5NDIwNzM5NCw5NDIwNzUwNiw5NDIwODUwNiw5NDIxNzUyMyw5NDIxODY1Myw5NDIyOTgzOSw0NzA4NzExOCw0NzA4NDM5Myw5NDIxMzIwMEICVFI%3D&g_st=aw" target="_blank">
                                 Kuaför Süleyman Tekin📍
+                            </a>
+                        </span>
+                        <span class="discount"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Yemen Kurukahve -->
+        <div class="company-box">
+            <img src="logos/yemen.jpg" alt="yemen" class="company-image">
+            <div class="company-info">
+                <h2>Yemen Kurukahve</h2>
+                <div class="info-section">
+                    <div class="info-box">
+                        <h3></h3>
+                        <p>%5-15 İndirim</p>
+                    </div>
+                    <div class="location-discount">
+                        <span class="location">
+                            <a href="https://www.google.com/maps/place/YEMEN+KURUKAHVE+CAFE/@37.9263114,40.149218,17z/data=!3m1!4b1!4m6!3m5!1s0x40751f84e6b5a4e9:0x6a58a438bbb11f24!8m2!3d37.9263114!4d40.1517929!16s%2Fg%2F11q93txm4x?entry=ttu&g_ep=EgoyMDI0MDkwOC4wIKXMDSoASAFQAw%3D%3D" target="_blank">
+                                Yemen Kuruhave Location 📍
+                            </a>
+                        </span>
+                        <span class="discount"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Artukbey -->
+        <div class="company-box">
+            <img src="logos/artukbey.jpg" alt="Artukbey" class="company-image">
+            <div class="company-info">
+                <h2>Artukbey</h2>
+                <div class="info-section">
+                    <div class="info-box">
+                        <h3></h3>
+                        <p>%20 İndirim</p>
+                    </div>
+                    <div class="location-discount">
+                        <span class="location">
+                            <a href="https://www.google.com/maps/place/ARTUKBEY+KAHVE+DİYARBAKIR+CAFE%26SHOP/@37.9380842,40.1354226,17z/data=!3m1!4b1!4m6!3m5!1s0x40751fbe77604c1f:0x5148f2e86aff1ddd!8m2!3d37.9380842!4d40.1379975!16s%2Fg%2F11gj0ht3v3?entry=ttu&g_ep=EgoyMDI0MDkwOC4wIKXMDSoASAFQAw%3D%3D" target="_blank">
+                                Artukbey Location 📍
                             </a>
                         </span>
                         <span class="discount"></span>
