--- a/index.html
+++ b/index.html
@@ -13,48 +13,6 @@
     </header>
 
     <div class="company-list">
-        <!-- Liberica Coffee -->
-        <div class="company-box">
-            <img src="logos/liberica.jpg" alt="Liberica" class="company-image">
-            <div class="company-info">
-                <h2>Liberica Coffee Shop</h2>
-                <div class="info-section">
-                    <div class="info-box">
-                        <h3></h3>
-                        <p>%20 İndirim</p>
-                    </div>
-                    <div class="location-discount">
-                        <span class="location">
-                            <a href="https://www.google.com/maps/place/Liberica+Coffee+Shop/@37.9381008,40.15538,17z/data=!3m1!4b1!4m6!3m5!1s0x40751ff882674627:0x4676f0e1891a709a!8m2!3d37.9381008!4d40.15538!16s%2Fg%2F11lgsgxw_w?entry=ttu&g_ep=EgoyMDI0MDkwMi4xIKXMDSoASAFQAw%3D%3D" target="_blank">
-                                Liberica Location 📍
-                            </a>
-                        </span>
-                        <span class="discount"></span>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- St. Morris Coffee & Kitchen -->
-        <div class="company-box">
-            <img src="logos/morris.jpg" alt="Company 2" class="company-image">
-            <div class="company-info">
-                <h2>St. Morris Coffee & Kitchen</h2>
-                <div class="info-section">
-                    <div class="info-box">
-                        <h3></h3>
-                        <p>%20 İndirim</p>
-                    </div>
-                    <div class="location-discount">
-                        <span class="location">
-                            <a href="https://www.google.com/maps/place/St.+Morris+Coffee+%26+kitchen/@37.9157939,40.2717183,17z/data=!3m1!4b1!4m6!3m5!1s0x407521cae2183249:0x2f5e8e107413c0e5!8m2!3d37.9157939!4d40.2742932!16s%2Fg%2F11s8_r40b7?entry=ttu&g_ep=EgoyMDI0MDkwMi4xIKXMDSoASAFQAw%3D%3D" target="_blank">
-                                St. Morris Coffee & Kitchen Location 📍
-                            </a>
-                        </span>
-                        <span class="discount"></span>
-                    </div>
-                </div>
-            </div>
-        </div>
         <!-- Künefeci Salih Usta -->
         <div class="company-box">
             <img src="logos/salihusta.jpg" alt="Company 3" class="company-image">
@@ -548,6 +506,27 @@
                 </div>
             </div>
         </div>
+        <!-- Midyeci Ahmet -->
+        <div class="company-box">
+            <img src="logos/midyeci_ahmet.jpg" alt="Company 1" class="company-image">
+            <div class="company-info">
+                <h2>Midyeci Ahmet</h2>
+                <div class="info-section">
+                    <div class="info-box">
+                        <h3></h3>
+                        <p>%15 İndirim</p>
+                    </div>
+                    <div class="location-discount">
+                        <span class="location">
+                            <a href="https://www.google.com/maps/place/Midyeci+Ahmet/@37.9448767,40.1567715,17z/data=!3m1!4b1!4m6!3m5!1s0x40751f3c164c7353:0xf0f7e647e05adad1!8m2!3d37.9448767!4d40.1593464!16s%2Fg%2F11rcggc10k?entry=ttu&g_ep=EgoyMDI0MDkxNi4wIKXMDSoASAFQAw%3D%3D" target="_blank">
+                               Midyeci Ahmet 📍
+                            </a>
+                        </span>
+                        <span class="discount"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- Kuaför Süleymen Tekin -->
         <div class="company-box">
             <img src="logos/yusuf_eymen.jpg" alt="Company 1" class="company-image">
@@ -562,6 +541,27 @@
                         <span class="location">
                             <a href="https://www.google.com/maps/place/Kooperatifler,+Kuaför+Yunus+Eymen,+Akkoyunlu+4.+Sk.+No:24%2FB,+21100+Yenişehir%2FDiyarbakır/data=!4m2!3m1!1s0x407521c6c3eb6d65:0x2fbe76d2523511ff?utm_source=mstt_1&entry=gps&coh=192189&g_ep=CAESCjExLjE0My4zMDUYACCenQoqdSw5NDIyMzI5OSw5NDIxNjQxMyw5NDIxMjQ5Niw5NDIxMjY2Niw5NDIwNzM5NCw5NDIwNzUwNiw5NDIwODUwNiw5NDIxNzUyMyw5NDIxODY1Myw5NDIyOTgzOSw0NzA4NzExOCw0NzA4NDM5Myw5NDIxMzIwMEICVFI%3D&g_st=aw" target="_blank">
                                 Kuaför Süleyman Tekin📍
+                            </a>
+                        </span>
+                        <span class="discount"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Çikolata Evim -->
+        <div class="company-box">
+            <img src="logos/cikolata_evim.jpg" alt="Company 1" class="company-image">
+            <div class="company-info">
+                <h2>Çikolata Evim</h2>
+                <div class="info-section">
+                    <div class="info-box">
+                        <h3></h3>
+                        <p>%10 İndirim</p> 
+                    </div>
+                    <div class="location-discount">
+                        <span class="location">
+                            <a href="https://www.google.com/maps/place/Çikolata+Evim+Diyarbakır/@37.927233,40.1485285,17z/data=!3m1!4b1!4m6!3m5!1s0x40751fb5c5d00423:0x6c500608a8ebe9cf!8m2!3d37.927233!4d40.1511034!16s%2Fg%2F11y1t8p1vj?entry=ttu&g_ep=EgoyMDI0MDkxNi4wIKXMDSoASAFQAw%3D%3D" target="_blank">
+                                Çikolata Evim 📍
                             </a>
                         </span>
                         <span class="discount"></span>
@@ -611,6 +611,28 @@
                 </div>
             </div>
         </div>
+        <!-- Makara Pizza -->
+        <div class="company-box">
+            <img src="logos/makara.jpg" alt="Company 5" class="company-image">
+            <div class="company-info">
+                <h2>Makara Pizza</h2>
+                <div class="info-section">
+                    <div class="info-box">
+                        <h3></h3>
+                        <p>%15 İndirim</p>
+                    </div>
+                    <div class="location-discount">
+                        <span class="location">
+                            <a href="https://www.google.com/maps/place/Makara+Pizza/@37.9453596,40.1572612,17z/data=!3m1!4b1!4m6!3m5!1s0x40751fd96af60147:0x7bb7407fefcd0d53!8m2!3d37.9453596!4d40.1598361!16s%2Fg%2F11kc6c8htz?entry=ttu&g_ep=EgoyMDI0MDkxNi4wIKXMDSoASAFQAw%3D%3D" target="_blank">
+                                Makara Pizza 📍
+                            </a>
+                        </span>
+                        <span class="discount"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
         <!-- Yayın Ağacı -->
         <div class="company-box">
             <img src="logos/yayinagaci.jpg" alt="Company 1" class="company-image">
