--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
                     <div class="location-discount">
                         <span class="location">
                             <a href="https://www.google.com/maps/place/YEMEN+KURUKAHVE+CAFE/@37.9263114,40.149218,17z/data=!3m1!4b1!4m6!3m5!1s0x40751f84e6b5a4e9:0x6a58a438bbb11f24!8m2!3d37.9263114!4d40.1517929!16s%2Fg%2F11q93txm4x?entry=ttu&g_ep=EgoyMDI0MDkwOC4wIKXMDSoASAFQAw%3D%3D" target="_blank">
-                                Yemen Kuruhave Location 📍
+                                Yemen Kuruhave 📍
                             </a>
                         </span>
                         <span class="discount"></span>
@@ -603,7 +603,7 @@
                     <div class="location-discount">
                         <span class="location">
                             <a href="https://www.google.com/maps/place/ARTUKBEY+KAHVE+DİYARBAKIR+CAFE%26SHOP/@37.9380842,40.1354226,17z/data=!3m1!4b1!4m6!3m5!1s0x40751fbe77604c1f:0x5148f2e86aff1ddd!8m2!3d37.9380842!4d40.1379975!16s%2Fg%2F11gj0ht3v3?entry=ttu&g_ep=EgoyMDI0MDkwOC4wIKXMDSoASAFQAw%3D%3D" target="_blank">
-                                Artukbey Location 📍
+                                Artukbey 📍
                             </a>
                         </span>
                         <span class="discount"></span>
